# hotsearch

./: .env.example  .gitignore  AGENTS.md  Agent.md  README.md  pyproject.toml
config/: AGENTS.md  README.md  bot.json  cron.json  embedding.json  feeds.json  hotsearch.json  logging_config.yaml  model_config.yaml  preference.json  scoring_rules.json  search_sources.json  trends.json
config/prompts/: feeds_summary.j2  llm_refine.j2  main.j2  preference.md  prune.md  search.md  search_summarize.j2  summary.j2  tag.j2  tag_classify.j2  template.md
config/templates/: hotsearch.html
data/: tags.db
data/outputs/: ainews_final_20260510_2118.md  eastmoney_final_20260510_2117.md  github_final_20260510_2118.md  ithome_final_20260510_2118.md  summary_20260510_2132.md  summary_20260510_2133.md  summary_20260510_2138.md  summary_20260510_2139.md  summary_20260510_2141.md  summary_20260510_2159.md  summary_20260510_2217.md  weibo_final_20260510_2117.md  zhihu_final_20260510_2104.md  zhihu_final_20260510_2105.md  zhihu_final_20260510_2109.md  zhihu_final_20260510_2110.md  zhihu_final_20260510_2117.md
docs/: REVIEW_CHECKLIST.md  recommendation-algorithms.md
docs/superpowers/plans/: 2026-05-10-agent-refactor.md
scripts/: cron-task.sh  crontab.txt  generate-crontab.py  html_convert.py  run.sh
src/hotsearch/: __init__.py  schemas.py
src/hotsearch/agents/: __init__.py  content.py  main.py  preference.py  search.py  summary.py  tag.py
src/hotsearch/config/: __init__.py  voices.json
src/hotsearch/llms/: __init__.py  base.py  config.py  deepseek.py  (+4 more)
tests/: hook-test.md
(+40 files in other folders)
