[project]
name = "hotsearch"
version = "1.0.0"
description = "Hotsearch & news aggregator bot with Feishu integration"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
bot = ["lark-oapi>=1.0.0"]

dev = ["lark-oapi>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
